--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -60,6 +60,16 @@
 		color: #ffffff;
 	}
 	
+	.module {
+	  margin: 0 0 1em 0;
+	  overflow: hidden;
+	}
+	
+	.line-clamp {
+	  display: -webkit-box;
+	  -webkit-line-clamp: 2;
+	  -webkit-box-orient: vertical;  
+	}
 </style>
 </head>
 <body>
