--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -8,8 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Bootstrap CSS -->
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
 	rel="stylesheet"
 	integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 	crossorigin="anonymous">
@@ -17,7 +16,8 @@
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- WYSIWYG editor -->
 <script src="https://cdn.ckeditor.com/4.16.0/standard-all/ckeditor.js"></script>
@@ -29,47 +29,44 @@
 	src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
 
 <!-- Select2 -->
-<link
-	href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
 	rel="stylesheet" />
-<script
-	src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
-<title
-	th:text="${title} == '' ? 'Fatecando' : ${title} + ' | Fatecando'"></title>
+<title th:text="${title} == '' ? 'Fatecando' : ${title} + ' | Fatecando'"></title>
 
 <link rel="icon"
 	href="https://image.winudf.com/v2/image1/Y29tLnR5YWdveS5mYXRlY19pY29uXzE1NzM1NjM0MTRfMDMx/icon.png?w=170&fakeurl=1">
 
 <style type="text/css">
-	body {
-		background-color: #fff;
-	}
-	
-	.btn-card {
-		cursor: pointer;
-	}
-	
-	.btn-card:hover {
-    	transform: scale(1.030);
-    	border: 1px solid red;
-	}
-	
-	.card-header {
-		background-color: #dc3545;
-		color: #ffffff;
-	}
-	
-	.module {
-	  margin: 0 0 1em 0;
-	  overflow: hidden;
-	}
-	
-	.line-clamp {
-	  display: -webkit-box;
-	  -webkit-line-clamp: 2;
-	  -webkit-box-orient: vertical;  
-	}
+body {
+	background-color: #fff;
+}
+
+.btn-card {
+	cursor: pointer;
+}
+
+.btn-card:hover {
+	transform: scale(1.030);
+	border: 1px solid red;
+}
+
+.card-header {
+	background-color: #dc3545;
+	color: #ffffff;
+}
+
+.module {
+	margin: 0 0 1em 0;
+	overflow: hidden;
+}
+
+.line-clamp {
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+}
 </style>
 </head>
 <body>
@@ -81,37 +78,34 @@
 						src="https://image.winudf.com/v2/image1/Y29tLnR5YWdveS5mYXRlY19pY29uXzE1NzM1NjM0MTRfMDMx/icon.png?w=170&fakeurl=1"
 						alt="" width="30" height="24" class="d-inline-block align-top">
 				</a>
-				<button class="navbar-toggler" type="button"
-					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-					aria-controls="navbarSupportedContent" aria-expanded="false"
-					aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#"
-								th:href="@{/dashboard}">Home</a>
+							<a class="nav-link active" aria-current="page" href="#" th:href="@{/dashboard}">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" th:href="@{/rewards}">Recompensas</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#" th:href="@{/ranking}">Ranking</a>
 						</li>
-						<li class="nav-item dropdown"
-							sec:authorize="hasRole('ROLE_ADMIN')">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-								role="button" data-bs-toggle="dropdown" aria-expanded="false">
-								Opções do ADM</a>
+						<li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+								data-bs-toggle="dropdown" aria-expanded="false"> Opções do ADM</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<li>
-									<a class="dropdown-item" href="#"
-										th:href="@{/admin/institutions}">Instituições</a>
+									<a class="dropdown-item" href="#" th:href="@{/admin/institutions}">Instituições</a>
 								</li>
 								<li>
 									<a class="dropdown-item" href="#" th:href="@{/admin/courses}">Cursos</a>
 								</li>
 								<li>
-									<a class="dropdown-item" href="#"
-										th:href="@{/admin/disciplines}">Disciplinas</a>
+									<a class="dropdown-item" href="#" th:href="@{/admin/disciplines}">Disciplinas</a>
 								</li>
 								<li>
 									<a class="dropdown-item" href="#" th:href="@{/admin/topics}">Gerenciar
@@ -134,8 +128,8 @@
 						<a class="btn btn-outline-light me-2" href="#" th:href="@{/join}"
 							sec:authorize="!isAuthenticated()">Cadastre-se</a>
 
-						<a class="btn btn-outline-light me-2" href="#"
-							th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a>
+						<a class="btn btn-outline-light me-2" href="#" th:href="@{/logout}"
+							sec:authorize="isAuthenticated()">Logout</a>
 
 						<span sec:authentication="name">Bob</span>
 					</div>
@@ -158,16 +152,14 @@
 			<hr>
 			<span>Fatecando | RCG, Inc.</span>
 			<br>
-			<small class="text-muted">Copyright 2020 www.fatecando.com,
-				ALL RIGHTS RESERVED. All website content, all photos, images, logos,
-				brands, sayings, sound, software, image set, layout, trade dress,
-				shown here are the exclusive property of NS2.COM Internet S.A. or
-				its partners. Any reproduction, in whole or in part, of any element
-				of identity is prohibited without express authorization. Violation
-				of any of the aforementioned rights will result in civil and
-				criminal liability under the terms of the Law. NS2.Com Internet S /
-				A - CNPJ: 09.339.936 / 0001-16 Rua Vergueiro, 943 - Liberdade -
-				CEP01504-001 - São Paulo - SP.</small>
+			<small class="text-muted">Copyright 2020 www.fatecando.com, ALL RIGHTS
+				RESERVED. All website content, all photos, images, logos, brands, sayings, sound,
+				software, image set, layout, trade dress, shown here are the exclusive property of
+				NS2.COM Internet S.A. or its partners. Any reproduction, in whole or in part, of any
+				element of identity is prohibited without express authorization. Violation of any of
+				the aforementioned rights will result in civil and criminal liability under the terms
+				of the Law. NS2.Com Internet S / A - CNPJ: 09.339.936 / 0001-16 Rua Vergueiro, 943 -
+				Liberdade - CEP01504-001 - São Paulo - SP.</small>
 		</div>
 	</footer>
 	<script
