Fix Like button bug

--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -171,7 +171,7 @@
 		$("time.timeago").timeago();
 
 		$('#like').click(function() {
-			$.post(location.href + '/like');
+			$.post(location.href.split('?')[0] + '/like');
 
 			let button = $(this);
 
