--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -165,7 +165,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" th:src="@{/js/timeago.js}"></script>
+	<script type="text/javascript" th:src="@{/js/timeago/timeago.js}"></script>
+	<script type="text/javascript" th:src="@{/js/timeago/jquery.timeago.pt-br.js}"></script>
 
 	<script type="text/javascript">
 		$("time.timeago").timeago();
