--- a/src/main/resources/templates/disciplines/forum-topic.html
+++ b/src/main/resources/templates/disciplines/forum-topic.html
@@ -67,7 +67,9 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" th:src="@{/js/timeago.js}"></script>
+	<script type="text/javascript" th:src="@{/js/timeago/timeago.js}"></script>
+	<script type="text/javascript" th:src="@{/js/timeago/jquery.timeago.pt-br.js}"></script>
+
 	<script type="text/javascript" th:inline="javascript">
 		$("time.timeago").timeago();
 
