--- a/src/main/resources/templates/users/ranking.html
+++ b/src/main/resources/templates/users/ranking.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeleaf.org"
-	th:replace="~{fragments/layout :: base ('Ranking', ~{::body})}">
+	th:replace="~{fragments/layout :: base('Ranking', ~{::body}, _, _, _)}">
 <head>
 <meta charset="utf-8">
 </head>
