--- a/src/main/resources/templates/admin/disciplines.html
+++ b/src/main/resources/templates/admin/disciplines.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org"
-	th:replace="~{fragments/layout :: base ('Disciplina', ~{::body})}">
+	th:replace="~{fragments/layout :: base('Disciplina', ~{::body}, _, _, _)}">
 <head>
 <meta charset="utf-8">
 </head>
@@ -172,8 +172,10 @@
 
 		</div>
 	</div>
-
+	
 	<script type="text/javascript" th:inline="javascript">
+		$('.select2').select2();
+		
 		$('#table').DataTable({
 			language: {
 				url: '//cdn.datatables.net/plug-ins/1.10.22/i18n/Portuguese-Brasil.json'
