--- a/src/main/resources/templates/admin/institutions.html
+++ b/src/main/resources/templates/admin/institutions.html
@@ -1,37 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org"
-	th:replace="~{fragments/layout :: base ('Instituições', ~{::body})}">
+<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: base('Instituições', ~{::body}, _, _, _)}">
 <head>
 <meta charset="utf-8">
 </head>
 <body>
 	<div class="row mt-3">
-
 		<div class="col-lg-6 mb-3">
 			<div class="card border-1 border-danger">
 				<div class="card-body">
 					<h4 class="card-title text-center">Cadastrar Instituição</h4>
 
-					<form action="#" method="post" th:action="@{/admin/institutions}"
-						th:object="${institution}">
+					<form action="#" method="post" th:action="@{/admin/institutions}" th:object="${institution}">
 						<div class="mb-3">
 							<label for="institution" class="form-label">Nome</label>
 
-							<input type="text" class="form-control" id="institution"
-								placeholder="Ex.: Fatec Zona Leste" th:field="*{name}"
-								th:classappend="${#fields.hasErrors('name')}? 'is-invalid'"
+							<input type="text" class="form-control" id="institution" placeholder="Ex.: Fatec Zona Leste" 
+								th:field="*{name}" th:classappend="${#fields.hasErrors('name')}? 'is-invalid'" 
 								aria-describedby="nameFeedback">
 
-							<div id="nameFeedback" class="invalid-feedback"
-								th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
+							<div id="nameFeedback" class="invalid-feedback" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
 								Mensagem de erro</div>
 						</div>
 
 						<div class="mb-3">
-							<label for="description" class="form-label">Descrição /
-								Observação</label>
-							<textarea class="form-control" id="description" rows="3"
-								th:field="*{description}">	
+							<label for="description" class="form-label">Descrição / Observação</label>
+							<textarea class="form-control" id="description" rows="3" th:field="*{description}">	
 							</textarea>
 						</div>
 
@@ -40,9 +33,7 @@
 				</div>
 			</div>
 
-			<div class="alert alert-success mt-3"
-				th:if="${!#strings.isEmpty(message)}" th:text="${message}"
-				role="alert">
+			<div class="alert alert-success mt-3" th:if="${!#strings.isEmpty(message)}" th:text="${message}" role="alert">
 				<button type="button" class="close" data-dismiss="alert">&times;</button>
 			</div>
 		</div>
@@ -52,8 +43,7 @@
 				<div class="card-body">
 					<h3 class="card-title text-center">Todas as Instituições</h3>
 
-					<table id="table"
-						class="table table-sm table-striped table-bordered table-hover">
+					<table id="table" class="table table-sm table-striped table-bordered table-hover">
 						<thead class="thead-dark">
 							<tr>
 								<th>ID</th>
@@ -62,14 +52,11 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr th:each="institution : ${institutions}"
-								th:data-id="${institution.id}" data-bs-toggle="modal"
+							<tr th:each="institution : ${institutions}" th:data-id="${institution.id}" data-bs-toggle="modal"
 								data-bs-target="#institutionModal">
 								<td class="align-middle" th:text="${institution.id}"></td>
-								<td id="nameTd" class="align-middle"
-									th:text="${institution.name}"></td>
-								<td id="descriptionTd" class="align-middle"
-									th:text="${institution.description}"></td>
+								<td id="nameTd" class="align-middle" th:text="${institution.name}"></td>
+								<td id="descriptionTd" class="align-middle" th:text="${institution.description}"></td>
 							</tr>
 						</tbody>
 					</table>
@@ -77,16 +64,12 @@
 			</div>
 
 			<!-- Modal -->
-			<div class="modal fade" id="institutionModal" tabindex="-1"
-				aria-labelledby="exampleModalLabel" aria-hidden="true">
-				<div
-					class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+			<div class="modal fade" id="institutionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 					<div class="modal-content">
 						<div class="modal-header">
-							<h5 class="modal-title" id="modalTitle">Atualizar
-								Instituição</h5>
-							<button type="button" class="btn-close" data-bs-dismiss="modal"
-								aria-label="Close"></button>
+							<h5 class="modal-title" id="modalTitle">Atualizar Instituição</h5>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
 						<div class="modal-body">
 							<div>
@@ -102,10 +85,8 @@
 							</div>
 						</div>
 						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary"
-								data-bs-dismiss="modal">Cancelar</button>
-							<button id="updateInstitution" type="button"
-								class="btn btn-danger">Atualizar</button>
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+							<button id="updateInstitution" type="button" class="btn btn-danger">Atualizar</button>
 						</div>
 					</div>
 				</div>
