--- a/src/main/resources/templates/disciplines/forum-topic.html
+++ b/src/main/resources/templates/disciplines/forum-topic.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeleaf.org"
-	th:replace="~{fragments/layout :: base (${forumTopic.title}, ~{::body})}">
+	th:replace="~{fragments/layout :: base(${forumTopic.title}, ~{::body}, _, _, _)}">
 <head>
 <meta charset="utf-8">
 </head>
