--- a/src/main/resources/templates/disciplines/topic-details.html
+++ b/src/main/resources/templates/disciplines/topic-details.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeleaf.org"
-	th:replace="~{fragments/layout :: base (${topic.name}, ~{::body})}">
+	th:replace="~{fragments/layout :: base(${topic.name}, ~{::body}, _, _, _)}">
 <head>
 <meta charset="utf-8">
 </head>
@@ -20,7 +20,6 @@
 	</div>
 
 	<!-- Quiz -->
-
 	<div class="card mt-3 bg-danger">
 		<div class="card-body">
 			<h4 class="card-title text-light" th:text="'Quiz - ' + ${topic.name}">Quiz</h4>
